--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.0",
+    "apollo-link": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
     "graphql": "^14.3.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
+    "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-select": "^2.4.3"
