--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.5.0",
+    "dataloader": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.11",
     "mongoose-unique-validator": "^2.0.3"
